# aceDRG

./: CMakeLists.txt  Makefile  bug-list  main.cpp  requirements.txt  setup.py
ACEDRG_ccp4i/: ccp4i_packages.def  modules.def
ACEDRG_ccp4i/scripts/: acedrg.script
ACEDRG_ccp4i/tasks/: acedrg.def  acedrg.tcl
ACEDRG_ccp4i/templates/: acedrg.com
LIBMOL/: Makefile  main.cpp
LIBMOL/doc/: ReadMe.docx  ReadMe.txt
LIBMOL/include/go/: GlobOpt.h
LIBMOL/include/kernel/: AllSystem.h  CCP4AtomType.h  CheckEnvAndGetMode.h  DictCifFile.h  ExtraRestrDictFile.h  MolGenerator.h  MolSdfFile.h  MonomerLib.h  PDBFile.h  SmileTool.h  TransCoord.h  angle.h  atom.h  atomsTree.h  bond.h  chain.h  chiral.h  chiralList.h  codClassify.h  config.h  constants.h  crystInfo.h  datatype.h  global.h  inputParams.h  kernel.h  libglink.h  molecule.h  neighbList.h  otherAtomContainer.h  periodicTable.h  plane.h  planeList.h  residue.h  ring.h  torsion.h  utility.h  utility.h_l
LIBMOL/include/math/: tnt_array1d.h
LIBMOL/src/kernel/: 1  (+33 more)
Tests/Tests_DictProbs/: Test_824_inDictProb_P.cif  Test_NO3_inDictProb_P.cif  cases_DictProbs_MultiJobs.py
Tests/Tests_Links/: cases_Link_MultiJobs.py
Tests/Tests_Mmcif/: cases_mmcif_MultiJobs.py
Tests/Tests_Mol/: cases_mol_MultiJobs.py
Tests/Tests_Mol2/: cases_mol2_MultiJobs.py
Tests/Tests_Option_r/: cases_Option_r_MultiJobs.py
Tests/Tests_ProbsCases/: cases_ProbsCases_MultiJobs.py
Tests/Tests_Pyras/: cases_pyras_MultiJobs.py
Tests/Tests_Smi/: cases_smi_MultiJobs.py
acedrg/: __main__.py  acedrg.py  acedrgRDKit.py  carBoMode.py  chem.py  ciffile.py  covLink.py  exebase.py  filetools.py  libcheck.py  metalMode.py  periodicTable.py  tautomer.py  utility.py
acedrg_p3/: __main__.py  acedrgRDKit.py  acedrgRDKit.pyBAK  ciffile.py  exebase.py  exebase.pyBAK  filetools.py  libcheck.py  qm_gamess.py  utility.py
doc/: Manual.docx  ReadMe.txt  acedrg.html
examples/: 1000006_unique_bond_and_angles.txt  1000097_all_mols.txt  ALZ_fromMmcif.cif  AcedrgOut_all_atoms_bonds_angles.table  C28_fromMmcif.cif  DB00201_fromMol.cif  DB00201_fromSmiles.cif  DB00211_fromMol.cif  DB00211_fromSmiles.cif  DB00221_fromMol.cif  DB00231_fromMol.cif  DB00231_fromSmiles.cif  DB00241_fromMol.cif  DB00241_fromMol_2.cif  DB00241_fromSmiles.cif  DDI_4.cif  DDI_cod.cif  DDI_fromMmcif.cif  DDI_types_atomTypes.txt  FAD_4.cif  ReadMeExamples.docx  runAllExamples.py
examples/ALZ_fromMmcif_TMP/: ALZ_fromMmcif_cod.rst
examples/AcedrgOut_TMP/: 1000004_all_mols.txt  1000006_all_mols.txt
examples/BXY_fromMmcif_TMP/: BXY_fromMmcif_cod.rst
examples/C28_fromMmcif_TMP/: C28_fromMmcif_cod.rst
examples/DB00201_fromMol_TMP/: DB00201_fromMol_cod.rst
examples/DB00201_fromSmiles_TMP/: DB00201_fromSmiles_cod.rst  DB00201_fromSmiles_libcheck.lib
examples/DB00211_fromMol_TMP/: DB00211_fromMol_cod.rst
examples/DB00211_fromSmiles_TMP/: DB00211_fromSmiles_cod.rst  DB00211_fromSmiles_libcheck  DB00211_fromSmiles_libcheck.lib  DB00211_fromSmiles_libcheck.odb
examples/DB00221_fromMol_TMP/: DB00221_fromMol_cod.rst
examples/DB00221_fromSmiles_TMP/: DB00221_fromSmiles_cod.rst  DB00221_fromSmiles_libcheck  DB00221_fromSmiles_libcheck.bat  DB00221_fromSmiles_libcheck.lib  DB00221_fromSmiles_libcheck_SMILE.cif  DB00221_fromSmiles_libcheck_SMILE.ps
examples/DB00231_fromMol_TMP/: DB00231_fromMol_cod.rst
examples/DB00231_fromSmiles_TMP/: DB00231_fromSmiles_cod.rst  DB00231_fromSmiles_libcheck  DB00231_fromSmiles_libcheck.lib  DB00231_fromSmiles_libcheck.odb  DB00231_fromSmiles_libcheck_SMILE.cif  DB00231_fromSmiles_libcheck_SMILE.ps
examples/DB00241_fromMol_2_TMP/: DB00241_fromMol_2_cod.rst
examples/DB00241_fromMol_TMP/: DB00241_fromMol_cod.rst
examples/DB00241_fromSmiles_TMP/: DB00241_fromSmiles_cod.rst  DB00241_fromSmiles_libcheck.bat  DB00241_fromSmiles_libcheck.lib  DB00241_fromSmiles_libcheck_SMILE.cif  DB00241_fromSmiles_libcheck_SMILE.ps
examples/DDI_4_TMP/: DDI_4_cod.rst
examples/DDI_cod_TMP/: DDI_cod_cod.rst
examples/DDI_fromMmcif_TMP/: DDI_fromMmcif_cod.rst
examples/FAD_4_TMP/: FAD_4_cod.rst
examples/inMol/: DB00221.mol
examples/inSmi/: DB00201.smiles  DB00221.smiles  DB00231.smiles
examples/inStdcif/: 1000001.cif  1000004.cif  1000006.cif  1000097.cif
examples/stdResults/: 1000004_unique_bond_and_angles.txt  ALZ_fromMmcif.cif  BXY_fromMmcif.cif  C28_fromMmcif.cif  DB00201_fromMol.cif  DB00201_fromSmiles.cif  DB00211_fromMol.cif  DB00211_fromSmiles.cif  DB00221_fromMol.cif  DB00221_fromSmiles.cif  DB00231_fromMol.cif  DB00231_fromSmiles.cif  DB00241_fromMol.cif  DB00241_fromSmiles.cif  DDI_fromMmcif.cif
include/forcefield/: getDerivs.h  getObjValues.h
include/go/: GlobOpt.h  LinAlg.h
include/kernel/: AllSystem.h  CCP4AtomType.h  CheckEnvAndGetMode.h  DictCifFile.h  DnaRna.h  MolGenerator.h  MolSdfFile.h  PDBFile.h  PDBHeaderSec.h  SmileTool.h  TransCoord.h  angle.h  angleList.h  atom.h  atomAssembly.h  atomsTree.h  bond.h  bondList.h  chain.h  chemPropSet.h  chiral.h  codBondAndAngleGroups.h  codClassify.h  constants.h  coordPolyhedra.h  crystInfo.h  datatype.h  file.h  getExtraRestrs.h  global.h  inputParams.h  kernel.h  libgcrystInfo.h  libgmodel.h  molecule.h  neighbList.h  periodicTable.h  plane.h  residue.h  restraintLists.h  (+6 more)
include/math/: jama_eig.h  tnt_array1d.h  tnt_array1d_utils.h  tnt_array2d.h  tnt_array2d_utils.h
src/forcefield/: getDerivs.cpp  getObjValue.cpp
src/go/: GlobOpt.cpp  LinAlg.cpp
src/kernel/: AllSystem.cpp  CCP4AtomType.cpp  DictCifFILE.cpp  MolGenerator.cpp  MolSdfFile.cpp  MonomerLib.cpp  PDBFile.cpp  SmileTool.cpp  TransCoord.cpp  angle.cpp  atom.cpp  atomAssembly.cpp  atomsTree.cpp  bond.cpp  chain.cpp  checkEnvAndGetMode.cpp  chemPropSet.cpp  chiral.cpp  codBondAndAngleGroups.cpp  codClassify.cpp  coordPolyhedra.cpp  crystInfo.cpp  file.cpp  getExtraRestrs.cpp  inputParams.cpp  libgcrystInfo.cpp  libglink.cpp  libgmodel.cpp  molecule.cpp  neighbList.cpp  periodicTable.cpp  plane.cpp  residue.cpp  restraintList.cpp  ring.cpp  secondaryStructures.cpp  ssbond.cpp  torsion.cpp  utility.cpp
utils/: dictionary_accumulator.py
(+145 files in other folders)
